--- a/css/test.css
+++ b/css/test.css
@@ -148,15 +148,17 @@ body {
   font-size: 16px;
   border: none;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .yes {
-  background-color: #28a745;
+  background-color: #94dcde;
   color: white;
   animation: up1 500ms linear infinite;
+  outline: none;
+  text-decoration: none;
 }
 .no {
-  background-color: #dc3545;
+  background-color: #e761bd;
   color: white;
 }
 
@@ -410,4 +412,130 @@ body {
   height: 100%;
   z-index: -1;
   pointer-events: none;
+}
+
+/* Responsive Desinge */
+
+/* Ajuste general para pantallas pequeñas */
+@media (max-width: 700px) {
+  body {
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .greetings {
+    font-size: 3rem;
+    gap: 0.3rem;
+  }
+
+  .description {
+    font-size: 1.2rem;
+    padding: 0 1rem;
+  }
+
+  .botones {
+    padding: 0.8rem 1.5rem;
+    font-size: 1rem;
+  }
+
+  .botones a {
+    font-size: 0.9rem;
+  }
+
+  .img8,
+  .img3 {
+    width: 10rem;
+    height: 10rem;
+  }
+
+  .img6,
+  .img5,
+  .img1,
+  .img2 {
+    width: 15rem;
+    height: 15rem;
+  }
+
+  .img9,
+  .img4 {
+    width: 20rem;
+    height: 20rem;
+  }
+
+  /* Distribución de imágenes con rutas corregidas */
+  .img1 {
+    background-image: url("../img/wa1.jpg");
+    top: -8%;
+    left: -8%;
+    --rotation: -10deg;
+  }
+  .img2 {
+    background-image: url("../img/wa2.jpg");
+    top: 5%;
+    right: -7%;
+    --rotation: 8deg;
+  }
+
+  .img3 {
+    background-image: url("../img/wa3.jpg");
+    top: 20%;
+    left: 5%;
+    --rotation: -15deg;
+  }
+
+  .img4 {
+    background-image: url("../img/wa4.jpg");
+    top: 34%;
+    left: 40%;
+    --rotation: 12deg;
+  }
+
+  .img5 {
+    background-image: url("../img/wa5.jpg");
+    bottom: 35%;
+    left: -20%;
+    --rotation: -7deg;
+  }
+
+  .img6 {
+    background-image: url("../img/wa6.jpg");
+    bottom: -15%;
+    right: -10%;
+    --rotation: 270deg;
+  }
+
+  .img7 {
+    background-image: url("../img/wa7.jpg");
+    display: none;
+  }
+
+  .img8 {
+    background-image: url("../img/wa8.jpg");
+    bottom: 12%;
+    right: -8%;
+    --rotatn: 25deg;
+  }
+
+  .img9 {
+    background-image: url("../img/wa9.jpg");
+    bottom: -1%;
+    left: -15%;
+    --rotation: -12deg;
+  }
+}
+
+/* Ajustes para pantallas extra pequeñas (móviles en vertical) */
+@media (max-width: 480px) {
+  .greetings {
+    font-size: 2.5rem;
+  }
+
+  .description {
+    font-size: 1rem;
+  }
+
+  .botones {
+    padding: 0.7rem 1.2rem;
+    font-size: 0.9rem;
+  }
 }
